--- a/manifest.json
+++ b/manifest.json
@@ -1,8 +1,8 @@
 {
   "manifest_version": 3,
-  "name": "YT De-Clutter: Hide Shorts & Playables",
-  "version": "1.1.0",
-  "description": "Removes YouTube Shorts, Playables, and the Explore section across youtube.com.",
+  "name": "YT De-Clutter: Hide Shorts, Playables, and Distractions",
+  "version": "1.2.0",
+  "description": "Removes YouTube Shorts, Playables, Explore section, and video page distractions for focused viewing.",
   "icons": {
     "512": "icons/icon.png"
   },
