--- a/manifest.json
+++ b/manifest.json
@@ -14,6 +14,7 @@
   "permissions": [
     "scripting",
     "tabs",
+    "storage",
     "declarativeNetRequest",
     "declarativeNetRequestWithHostAccess"
   ],
